<resources>
    <string name="app_name">Savics</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_patient">Add new patient</string>
    <string name="email">Email</string>
    <string name="age">Age</string>
    <string name="full_name">Full Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="support_savics_org">support@savics.org</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="reset">Reset</string>
    <string name="current_username">Current username</string>
    <string name="current_no">currentNo</string>
    <string name="max_no">maxNo</string>
    <string name="max_number_of_patients_allowed">Max number of patients allowed</string>
    <string name="save">Save</string>
</resources>